--- a/ACS111138_CNN_Assignment.ipynb
+++ b/ACS111138_CNN_Assignment.ipynb
@@ -520,7 +520,10 @@
       "source": [
         "# Task 5: Report\n",
         "\n",
-        "這次的功課 我用了三層convolutional layers和max-pooling和防止overfitting的dropout，optimizer的部分我用的是Adam，並設計了EarlyStopping and ReduceLROnPlateau來調整學習率與提早在overfitting前結束訓練，最後我也加入ImageDataGenerator進行資料增強，使模型更有泛化能力。從訓練結果可以看到 validation accuracy 明顯提升，也讓測試集表現更加穩定。"
+        "這次的功課 我用了三層convolutional layers 比原始的多加了一層 和max-pooling還有防止overfitting的dropout\n",
+        "optimizer的部分我用的是Adam 並設計了EarlyStopping提早在overfitting前結束訓練and ReduceLROnPlateau來調整學習率\n",
+        "最後我也加入ImageDataGenerator進行資料增強 使模型更有泛化能力。\n",
+        "從訓練結果可以看到 validation accuracy 明顯提升，也讓測試集表現更加穩定。"
       ],
       "metadata": {
         "id": "llOvJxmk6luY"
