--- a/ACS111138_CNN_Assignment.ipynb
+++ b/ACS111138_CNN_Assignment.ipynb
@@ -520,10 +520,11 @@
       "source": [
         "# Task 5: Report\n",
         "\n",
-        "這次的功課 我用了三層convolutional layers 比原始的多加了一層 和max-pooling還有防止overfitting的dropout\n",
-        "optimizer的部分我用的是Adam 並設計了EarlyStopping提早在overfitting前結束訓練and ReduceLROnPlateau來調整學習率\n",
-        "最後我也加入ImageDataGenerator進行資料增強 使模型更有泛化能力。\n",
-        "從訓練結果可以看到 validation accuracy 明顯提升，也讓測試集表現更加穩定。"
+        "這次的功課 我用了三層convolutional layers比原始的多加了一層和搭配max-pooling還有防止overfitting的dropout\n",
+        "optimizer的部分我用的是Adam 並設計了EarlyStopping提早在overfitting前結束訓練和加入ReduceLROnPlateau來調整學習率\n",
+        "ReduceLROnPlateau會在模型遇到瓶頸的時候 也就是loss沒有明顯下降時 自動降低學習綠 讓模型能夠更細緻地微調參數 這樣的策略可以提升模型的最終效能與泛化能力\n",
+        "最後我也加入ImageDataGenerator進行資料增強 像是旋轉 平移與水平翻轉等 幫助模型看見更多不同變化的資料 使模型更有泛化能力\n",
+        "從訓練結果可以看到 validation accuracy 明顯提升，也讓測試集表現更加穩定"
       ],
       "metadata": {
         "id": "llOvJxmk6luY"
